@@ -4,7 +4,11 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.05b: *********************************
 
-BUG: (10/20/96, GVG) Exception in TechPalette if Mosis is chosen and you select min or aligned primitives (TSMC180)
+BUG: (10/20/06, GVG) [Bug 1245] FIle->Project Settings->Technology page is confusing/inconsistent (Bug# 1245)
+FIX: Technology tab in project preferences was re-organized. Only 1 layout technology is displayed and this will
+happen if the current technology is either MoCMOS or TSMC90.
+
+BUG: (10/20/06, GVG) Exception in TechPalette if Mosis is chosen and you select min or aligned primitives (TSMC180)
 FIX: More checking for unused elements.
 
 IMP: (10/18/06, DN) Added class topology.Topology to manage graph of nodes and arcs.
